Fix index page on small screens

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -258,6 +258,9 @@ header a,
   color: white;
   text-align: center;
 }
+.project h1 {
+  font-size: 30px;
+}
 .project p {
   color: white;
 }
@@ -266,9 +269,6 @@ header a,
   width: 100%;
   height: 100%;
   display: block;
-}
-.project img[class] {
-  width: 150px;
 }
 .project .project-info {
   display: flex;
@@ -287,12 +287,8 @@ header a,
 }
 .blurb .project-info h1 {
   font-size: 1.3em;
-  font-weight: 500;
+  font-weight: 600;
 }
-/*.hero-color-wrapper,
-.hero .project-info {
-  background-color: rgba(0, 120, 120, 0.75);
-}*/
 .home-harvest .project-info {
   background-color: rgba(50, 150, 120, 0.75);
 }
@@ -561,9 +557,6 @@ iframe {
   .quiz-quarrel .project-info {
     background-color: inherit;
   }
-/*  .hero:hover .project-info {
-    background-color: rgba(0, 120, 120, 0.75);
-  }*/
   .home-harvest:hover .project-info {
     background-color: rgba(50, 150, 120, 0.75);
   }
